-
Type:
Bug
-
Status: Resolved
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: Impala 3.2.0
-
Fix Version/s: Impala 3.2.0
-
Component/s: Backend
-
Labels:
-
Target Version:
-
Epic Color:ghx-label-7
The change for IMPALA-7694 dropped the fragment instance ID from the runtime-state profile. However, this also removed it from the /memz page. We should add it back there.
https://gerrit.cloudera.org/#/c/12069/8/be/src/runtime/runtime-state.cc@76