IMPALA-8209: Include fragment instance ID in memz/ breakdown

The change for IMPALA-7694 had accidentally removed the fragment
instance ID from the memz/ breakdown. This change puts it back and adds
a test to make sure it's there.

This change also pads query IDs with zeros when printing them in the
backend.

Change-Id: I73bf06bf95c88186b16fd03243de9bac946c5cc8
Reviewed-on: http://gerrit.cloudera.org:8080/12524
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>